tests/error/array_errors/new_array_cannot_infer.err
Guppy compilation failed. Error in file $FILE:13

11:    @guppy(module)
12:    def main() -> None:
13:        xs = array()
                ^^^^^^^
GuppyTypeError: Cannot infer the array element type. Consider adding a type annotation.
